--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,10 @@ jobs:
         run: npm run build
       
       - name: Commit build folder
-        run: git checkout -b gh-pages | git commit ./build -m "Build update"
+        run: 
+          git add ./build |
+          git commit ./build -m "Build update"
+          git checkout -b gh-pages
       
       - name: Push build folder to gh-pages branch
         run: git push
