--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         run: 
           git add -f ./build |
           git commit ./build -m "Build update"
-          git checkout -b gh-pages
+          git checkout gh-pages
       
       - name: Push build folder to gh-pages branch
         run: git push
