--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
       
       - name: Commit build folder
         run: 
-          git add -f build |
-          git commit build -m "Build update"
+          git add -f build &
+          git commit build -m "Build update" &
           git checkout gh-pages
       
       - name: Push build folder to gh-pages branch
