--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm run build
       
       - name: Commit build folder
-        run: git remote set-url origin https://git:${{ secrets.ACCESS_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git & git add -f build & git commit -m "Build update" & git push
+        run: git --version & git branch -v
       
       - name: Push build folder to gh-pages branch
         run: git push
