--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,16 +16,11 @@ jobs:
       - name: Checking the repository code to gain access to it
         uses: actions/checkout@v3
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Print
+        run: git remote -v | git branch -v
 
-      - name: Build React-app
-        run: npm run build
-      
-      - name: Commit build folder
-        run: git --version & git branch -v
-      
-      - name: Push build folder to gh-pages branch
-        run: git push
+      # - name: Install dependencies
+      #   run: npm ci
 
-
+      # - name: Build React-app
+      #   run: npm run build
