--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Print
-        run: git remote -v | git branch -v
+        run: git checkout -b gh-pages
 
       # - name: Install dependencies
       #   run: npm ci
