--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,11 +16,12 @@ jobs:
       - name: Checking the repository code to gain access to it
         uses: actions/checkout@v3
 
-      - name: Print
-        run: git checkout -b gh-pages
-
       # - name: Install dependencies
       #   run: npm ci
 
       # - name: Build React-app
       #   run: npm run build
+
+      - name: Commit build folder
+        run: git add -f build | git commit -m "Build update"
+      
