--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,11 +16,11 @@ jobs:
       - name: Checking the repository code to gain access to it
         uses: actions/checkout@v3
 
-      # - name: Install dependencies
-      #   run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-      # - name: Build React-app
-      #   run: npm run build
+      - name: Build React-app
+        run: npm run build
 
       - name: Commit build folder
         run: git add -f build | git commit -m "Build update"
