--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,5 @@ jobs:
         run: npm run build
 
       - name: Commit build folder
-        run: git add -f build
+        run: git add -f build & git commit -m "Build update"
       
