--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,5 @@ jobs:
         run: npm run build
 
       - name: Commit build folder
-        run: git checkout
+        run: git remote set-url main https://github.com/LatyshevArtem/test-repo.git
       
