--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,5 @@ jobs:
         run: |
           git branch -v
           git remote -v
+          git add -f build
+          git commit -m "Build update"
